# sgrades

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  api_spec.json  api_specs.json  api_specs.yaml  batch_evaluation_1761095267.json  besesr.db  besesr_api_specs.json  besesr_api_specs.yaml  cache_datasets.py  create_data_dirs.py  create_database.py  create_dummy_zip.py  dataset_discovery_cache.json  docker-compose.yml  export_specs.py  formatted_openapi.json  ground_truth_BEEtlE_2way.csv  openapi.json  project_structure.txt  pyproject.toml  requirements.txt  setup_apache_frontend.sh  sgrades.db  test_ASAP-AES.csv
apache_config/: sgrades.conf
app/: cache.py  db.py  main.py  test.py  test_models.py
mllm_evaluation/: batch_evaluate_datasets.py  debug_zero_shot.py  evaluation_avg.py  import_json_results.py  mllm_models.py  run_all_models_sequential.py  sequential_final_results_1758347251.json  sequential_final_results_1758652257.json  sequential_progress_1758336177.json  sequential_progress_1758341156.json  sequential_progress_1758347251.json  sequential_progress_1758652257.json  single_model_test.py  submit_zero_shot_benchmark.py  test_individual_datasets.py  test_zero_shot_all.py  visualization_code_aes.py  visualization_code_asag.py  visualize_classification.py  zero_shot_claude-sonnet_1758347251.json  zero_shot_gemini-flash_1758328976.json  zero_shot_gemini-flash_1758330247.json  zero_shot_gemini-flash_1758336177.json  zero_shot_gemini-pro_1758341156.json  zero_shot_gpt4o-mini_1758652257.json  zero_shot_results_1757555251.json  (+1 more)
(+157 files in other folders)
